@startuml

enum PartType {
  Verse
  Chorus
  PreChorus
  PostChorus
  Bridge
  Intro
  Interlude
  Solo
  Outro
}

class Part {
    PartType partType
    String lyrics
    String chords
}

class Song {
    string Title
    string Artist
    int Tempo
    in Capo
    List<SongPart> Parts
}

class Setlist {
    String name
    List<Song> songs
}



Song "1" o-- "*" Part : lyrics
PartType -r-- Part
Setlist "1" o-- "*" Song : songs

@enduml
